--- a/templates/partials/links.hbs
+++ b/templates/partials/links.hbs
@@ -7,8 +7,10 @@
                 <li><a href="/clients"><span>Clients</span></a></li>
                 <li><a href="/stylist"><span>Stylist</span></a></li>        
                 <li><a href="/posts"><span>Posts</span></a></li>
+                <li><a href="/approvals"><span>Approved Accounts</span></a></li>        
                 <li><a href="/blockcontacts"><span>Block</span></a></li>
                 <li><a href="/appointments"><span>Appointments</span></a></li>
+                <li><a href="/pastappointments"><span>Past Appointments</span></a></li>
                 <li><a href="/access"><span>Access</span></a></li>
                 <li><a href="/customersupport"><span>Customer Support</span></a></li>
                <li><a href="/setting"><span>Setting</span></a></li>   
