--- a/templates/views/oldappointments.hbs
+++ b/templates/views/oldappointments.hbs
@@ -42,7 +42,7 @@
                             <div class="card-body">
                                 <div class="d-md-flex justify-content-between mb-2">
                                     <ul class="nav nav-tabs b-none">
-                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i> Appointments</a></li>                                                                            </ul>
+                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i>Past Appointments</a></li>                                                                            </ul>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4 col-sm-12">
@@ -76,7 +76,6 @@
                                         <div class="ribbon-box green">New</div>
                                         <img class="rounded-circle img-thumbnail w100" src="images/sm/avatar1.jpg" alt="">
                                         <p class="mt-3 mb-0">ramzan@gmail.com</p>
-                                        <span>12 Dec 2021</span>
                                         <div class="row text-center mt-4">
                                             <div class="col-6 border-right">
                                                 <label class="mb-0">Client Name</label>
@@ -88,6 +87,12 @@
                                             </div>
                                         </div>
 
+                                  <div class="row text-center mt-4">
+                                            <div class="col-12">
+                                                <label class="mb-0">Completed On</label>
+                                                <h4 class="font-18">28 Dec 2021</h4>
+                                            </div>
+                                        </div>
                 
                                     </div>
                                 </div>
