--- a/templates/views/approvals.hbs
+++ b/templates/views/approvals.hbs
@@ -76,15 +76,15 @@
                                         <div class="ribbon-box green">New</div>
                                         <img class="rounded-circle img-thumbnail w100" src="images/sm/avatar1.jpg" alt="">
                                         <p class="mt-3 mb-0">ramzan@gmail.com</p>
-                                        <span>12 Dec 2021</span>
+                                        <span>Junaid Akbar</span>
                                         <div class="row text-center mt-4">
                                             <div class="col-6 border-right">
-                                                <label class="mb-0">Client Name</label>
-                                                <h4 class="font-18">Mohammad Ramzan</h4>
+                                                <button class="mb-0 btn btn-sucess">Approved</button>
+                                                
                                             </div>
                                             <div class="col-6">
-                                                <label class="mb-0">Stylist Name</label>
-                                                <h4 class="font-18">Ali Abbbas</h4>
+                                                <button class="mb-0 btn btn-sucess">Denied</button>
+                                               
                                             </div>
                                         </div>
 
