--- a/templates/views/clients.hbs
+++ b/templates/views/clients.hbs
@@ -90,7 +90,7 @@
 
                                          <div class="row text-center mt-4">
                                             <div class="col-6 border-right">
-                                                <button class="mb-0 btn btn-sucess">Block</button>
+                                                <button class="mb-0 btn btn-sucess disabled">Block</button>
                                                 
                                             </div>
                                             <div class="col-6">
@@ -127,7 +127,7 @@
                                                 
                                             </div>
                                             <div class="col-6">
-                                                <button class="mb-0 btn btn-sucess">UnBlock</button>
+                                                <button class="mb-0 btn btn-sucess disabled">UnBlock</button>
                                                
                                             </div>
                                         </div>
