--- a/templates/views/oldappointments.hbs
+++ b/templates/views/oldappointments.hbs
@@ -76,14 +76,20 @@
                                         <div class="ribbon-box green">New</div>
                                         <img class="rounded-circle img-thumbnail w100" src="images/sm/avatar1.jpg" alt="">
                                         <p class="mt-3 mb-0">ramzan@gmail.com</p>
+                                        <p class="mt-3 mb-0" >35$</p>
                                         <div class="row text-center mt-4">
-                                            <div class="col-6 border-right">
+                                            <div class="col-4 border-right">
                                                 <label class="mb-0">Client Name</label>
                                                 <h4 class="font-18">Mohammad Ramzan</h4>
                                             </div>
-                                            <div class="col-6">
+                                            <div class="col-4 border-right">
                                                 <label class="mb-0">Stylist Name</label>
                                                 <h4 class="font-18">Ali Abbbas</h4>
+                                            </div>
+
+                                            <div class="col-4 border-right">
+                                                <label class="mb-0">Service Name</label>
+                                                <h4 class="font-18">Hair Cut</h4>
                                             </div>
                                         </div>
 
