--- a/templates/views/stylish.hbs
+++ b/templates/views/stylish.hbs
@@ -108,6 +108,16 @@
                                                     <h4 class="font-18">$5,510</h4>
                                                 </div>
                                             </div>
+                                              <div class="row text-center mt-4">
+                                            <div class="col-6 border-right">
+                                                <button class="mb-0 btn btn-sucess">Block</button>
+                                                
+                                            </div>
+                                            <div class="col-6">
+                                                <button class="mb-0 btn btn-sucess disabled">UnBlock</button>
+                                               
+                                            </div>
+                                        </div>
                                         </div>
                                     </div>
                                 </div>
@@ -206,12 +216,6 @@
                                                             </div>
                                                         </div>
 
-                                                        <div class="col-sm-12">
-                                                            <button type="submit"
-                                                                class="btn btn-primary">Approved</button>
-                                                            <button type="submit"
-                                                                class="btn btn-outline-secondary">Denied</button>
-                                                        </div>
                                                     </div>
                                                 </form>
                                             </div>
