--- a/templates/views/adminapproved.hbs
+++ b/templates/views/adminapproved.hbs
@@ -42,7 +42,7 @@
                             <div class="card-body">
                                 <div class="d-md-flex justify-content-between mb-2">
                                     <ul class="nav nav-tabs b-none">
-                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i> Pending Accounts</a></li>                                                                            </ul>
+                                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#list"><i class="fa fa-list-ul"></i> Addmin Approval</a></li>                                                                            </ul>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-3 col-md-4 col-sm-12">
@@ -99,20 +99,11 @@
                                         <div class="col-sm-12">
                                             <div class="card">
                                                 <div class="card-header">
-                                                    <h3 class="card-title">Add Stylist</h3>
+                                                    <h3 class="card-title">Add Customer/HR Form</h3>
                                                 </div>
                                                 <form class="card-body">
                                                     <div class="row clearfix">
-                                                        <div class="col-md-12 col-sm-12">
-                                                            <div class="form-group">
-                                                                <div class="card-body text-center">
-                                                                    <img class="rounded-circle img-thumbnail w100"
-                                                                        src="images/sm/avatar4.jpg" alt="" ,
-                                                                        class="center">
-                                                                    <h3>Stylist Photo</h3>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+                                                   
                                                         <div class="col-md-6 col-sm-12">
                                                             <div class="form-group">
                                                                 <label>First Name</label>
@@ -173,13 +164,13 @@
 
                                                         <div class="col-sm-6">
                                                             <div class="form-group mt-3">
-                                                                <label>Stylist Services</label>
-                                                                <textarea rows="4" class="form-control no-resize"
-                                                                    placeholder="Please type what you want..."></textarea>
+                                                                <div class="form-group">
+                                                                <label>Enter Your Role</label>
+                                                                <input type="text" class="form-control">
                                                             </div>
                                                         </div>
 
-                                                        <div class="col-sm-6">
+                                                        <div class="col-sm-12 col-lg-12 col-md-12">
                                                             <div class="form-group mt-2 mb-3">
                                                                 <input type="file" class="dropify">
                                                                 <small id="fileHelp" class="form-text text-muted">Upload
