--- a/templates/views/setting.hbs
+++ b/templates/views/setting.hbs
@@ -67,7 +67,6 @@
                     <div class="col-lg-12">
                         <div class="d-lg-flex justify-content-between">
                             <ul class="nav nav-tabs page-header-tab">
-                                <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Notifications">Notifications </a></li>
                                 <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#Change_Password">Change Password </a></li>
                             </ul>
                         </div>
@@ -81,48 +80,10 @@
                     <div class="col-md-12">
                         <div class="tab-content">          
                            
-                            <div class="tab-pane active show" id="Notifications">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <h3 class="card-title">Notifications Settings</h3>
-                                      
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="form-group">
-                                                    <input type="message" class="form-control" placeholder="Write A Message">
-                                                </div>
-                                        <ul class="list-group">
-                                        
-                                           
-                                           
-                                            <li class="list-group-item">
-                                                Sent Message To All Stylist
-                                                <div class="float-right">
-                                                    <label class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" />
-                                                        <span class="custom-control-label">&nbsp;</span>
-                                                    </label>
-                                                </div>
-                                            </li>
-                                            <li class="list-group-item">
-                                                Sent Message To All Clients
-                                                <div class="float-right">
-                                                    <label class="custom-control custom-checkbox">
-                                                        <input type="checkbox" class="custom-control-input" />
-                                                        <span class="custom-control-label">&nbsp;</span>
-                                                    </label>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                          <div class="col-sm-12 mt-20 text-right">
-                                                <button type="button" class="btn btn-primary">Sent</button> 
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
 
 
-                            <div class="tab-pane" id="Change_Password">
+                            <div class="tab-pane active show" id="Change_Password">
                                 <div class="card">
 
                                     <div class="card-header">
