--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -1,64 +1,59 @@
 
-<!doctype html>
-<html lang="en" dir="ltr">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="css/auth.css"  rel="stylesheet"/>
+<!------ Include the above in your HEAD tag ---------->
+<div class="container register">
+                <div class="row">
+                    <div class="col-md-3 register-left">
+                        <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+                        <h3>Welcome To MobiStylez</h3>
+                    </div>
+                    <div class="col-md-9 register-right">
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                <h3 class="register-heading">Registration Form</h3>
+                                <form action="/register" method="POST">
+                                 <div class="row register-form">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="First Name *" value="" name="firstname"/>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Last Name *" value="" name="lastname"/>
+                                       </div>
+                                     </div>
+                                      <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Your Email *" value="" name="email"/>
+                                        </div>
+                                       </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Password *" value="" name="password"/>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">                                       
+                                        <div class="form-group">
+                                            <input type="password" class="form-control"  placeholder="Confirm Password *" value=""  name="confirmpassword"/>
+                                        </div>
+                                    </div>
+ 
+                                      <div class="col-md-6">  
+                                        <input type="submit" class="btnRegister"  value="Register"/>
+                                        
+                                    </div>
+                                </div>
 
-<!-- soccer/project/register.html  07 Jan 2020 03:42:43 GMT -->
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<link rel="icon" href="favicon.ico" type="image/x-icon"/>
-
-<title> Register</title>
-
-<!-- Bootstrap Core and vandor -->
-<link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css" />
-
-<!-- Core css -->
-<link rel="stylesheet" href="css/main.css"/>
-<link rel="stylesheet" href="css/theme1.css"/>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-
-</head>
-<body class="font-montserrat">
-
-<div class="auth">
-    <div class="auth_left">
-        <div class="card">
-            <div class="text-center mb-5">
-               <i class="fa fa-soccer-ball-o brand-logo"></i>
-            <div class="card-body">
-                <div class="card-title">Create new account</div>
-                <div class="form-group">
-                    <label class="form-label">Name</label>
-                    <input type="text" class="form-control" placeholder="Enter name">
+                                </form>
+                                
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="form-label">Email address</label>
-                    <input type="email" class="form-control" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Password</label>
-                    <input type="password" class="form-control" placeholder="Password">
-                </div>
-                <div class="form-footer">
-                    <button type="submit" class="btn btn-primary btn-block" id="/register">Create new account</button>
-                </div>
+
             </div>
-            <div class="text-center text-muted">
-                Already have account? <a href="/">Sign in</a>
-            </div>
-        </div>
-    </div>
-    <div class="auth_right full_img"></div>
-</div>
 
-<script src="bundles/lib.vendor.bundle.js"></script>
-<script src="js/core.js"></script>
-</body>
-
-<!-- soccer/project/register.html  07 Jan 2020 03:42:43 GMT -->
-</html>
