--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -29,10 +29,10 @@
                                     <div class="col-md-12">
                                     <button type="submit" class="btnLogin btn btn-primary me-2" value="Login" style="margin: 10px;"/>Login</button>   
                                     </div>
-                                      <div class="text-center text-muted col-md-12" style="padding: 10px;">
+                                      {{!-- <div class="text-center text-muted col-md-12" style="padding: 10px;">
                                        Dont Have Account <a href="/register">Register Here</a>
                                         </div>
-                                    
+                                     --}}
                                 </div>
 
                                 </form>
