ui design changes

--- a/templates/partials/links.hbs
+++ b/templates/partials/links.hbs
@@ -3,7 +3,7 @@
         <nav id="left-sidebar-nav" class="sidebar-nav">
             <ul class="metismenu">
                 <li class="g_heading">Menus</li>
-                <li><a href="/">Dashboard</span></a></li>                
+                <li><a href="/dashboard">Dashboard</span></a></li>                
                 <li><a href="/clients"><span>Clients</span></a></li>
                 <li><a href="/stylist"><span>Stylist</span></a></li>        
                 <li><a href="/posts"><span>Posts</span></a></li>
