--- a/templates/views/posts.hbs
+++ b/templates/views/posts.hbs
@@ -20,8 +20,7 @@
     <!-- Core css -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/theme1.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" /></head>
 
 <body class="font-montserrat">
     <!-- Page Loader -->
@@ -40,10 +39,9 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-md-flex justify-content-between mb-2">
-                                        <ul class="nav nav-tabs b-none">
-                                            <li class="nav-item"><a class="nav-link active" data-toggle="tab"
-                                                    href="#list"><i class="fa fa-list-ul"></i> Posts</a></li>
-                                        </ul>
+                                        <ul class="nav nav-tabs b-none">   
+                                         <li class="nav-item"><a class="nav-link active" data-toggle="tab"
+                                                    href="#list"><i class="fa fa-list-ul"></i> Posts</a></li>                                        </ul>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-8 col-md-8 col-sm-8">
@@ -67,22 +65,122 @@
 
             <div class="section-body">
                 <div class="container-fluid">
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="list" role="tabpanel">
-                            <div class="row clearfix">
-                                <div class="col-xl-4 col-lg-4 col-md-4">
-                                    <div class="card">
-                                        <div class="card-body text-center">
-                                            <img class=" img-thumbnail" style="width: 70%;" src="images/sm/avatar4.jpg"
-                                                alt="">
-                                           
-                                        </div>
-                                           <h3 style="text-align: center;">Pir Ali Shah</h3>
-                                          <button class="btn btn-small">Delete</button>
-                                            <button class="btn btn-small">View</button>
-                                    </div>
+                   <div class="row row-cards">
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/1.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar1.jpg" alt="">
+                                <div>
+                                    <div>Nathan Guerrero</div>
+                                    <small class="d-block text-muted">12 days ago</small>
                                 </div>
-                         </div>
+                                <div class="ml-auto text-muted">
+                                     <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/2.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar2.jpg" alt="">
+                                <div>
+                                    <div>Alice Mason</div>
+                                    <small class="d-block text-muted">12 days ago</small>
+                                </div>
+                                <div class="ml-auto text-muted">
+                                    <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/2.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar2.jpg" alt="">
+                                <div>
+                                    <div>Alice Mason</div>
+                                    <small class="d-block text-muted">12 days ago</small>
+                                </div>
+                                <div class="ml-auto text-muted">
+                                      <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                      <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/2.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar2.jpg" alt="">
+                                <div>
+                                    <div>Alice Mason</div>
+                                    <small class="d-block text-muted">12 days ago</small>
+                                </div>
+                                <div class="ml-auto text-muted">
+                                      <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                      <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/2.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar2.jpg" alt="">
+                                <div>
+                                    <div>Alice Mason</div>
+                                    <small class="d-block text-muted">12 days ago</small>
+                                </div>
+                                <div class="ml-auto text-muted">
+                                      <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                      <div class="col-sm-6 col-lg-4">
+                        <div class="card p-3">
+                            <a href="javascript:void(0)" class="mb-3">
+                                <img src="images/gallery/2.jpg" alt="Photo by Nathan Guerrero" class="rounded">
+                            </a>
+                            <div class="d-flex align-items-center px-2">
+                                <img class="avatar avatar-md mr-3" src="images/xs/avatar2.jpg" alt="">
+                                <div>
+                                    <div>Alice Mason</div>
+                                    <small class="d-block text-muted">12 days ago</small>
+                                </div>
+                                <div class="ml-auto text-muted">
+                                      <i class="fas fa-trash-alt"></i>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
