--- a/templates/views/adminapproved.hbs
+++ b/templates/views/adminapproved.hbs
@@ -19,6 +19,8 @@
 <!-- Core css -->
 <link rel="stylesheet" href="css/main.css"/>
 <link rel="stylesheet" href="css/theme1.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" /></head>
+
 </head>
 
 <body class="font-montserrat">
