--- a/templates/partials/tables.hbs
+++ b/templates/partials/tables.hbs
@@ -20,7 +20,7 @@
 
                                                 <div class="col-md-6 col-sm-12">
                                                     <div class="form-group">
-                                                        <label>User Name</label>
+                                                        <label>Role</label>
                                                         <input type="text" class="form-control">
                                                     </div>
                                                 </div>
