--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -95,6 +95,7 @@
                     </div>
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="card">
+                            <a href="/appointments"/>
                             <div class="card-header">
                                 <h3 class="card-title">Appointment Request</h3>
                             </div>
@@ -287,7 +288,7 @@
                                                 <th>Stylist Name</th>
                                                 <th>Stylist Total</th>
                                                 <th>Payment</th>
-\                                            </tr>
+                                            </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
